client menu added, shows local itemsets

--- a/clientTool/lib/js/.jshintrc
+++ b/clientTool/lib/js/.jshintrc
@@ -1,8 +1,11 @@
 {
     "browser": true,
     "node": true,
+    "jquery": true,
     "globals": {
         "gui": true,
-        "win": true
+        "win": true,
+        "_": true,
+        "UI": true
     }
 }
