change to materialize css, create SideNav and hook to router, display stored JSON

--- a/clientTool/package.json
+++ b/clientTool/package.json
@@ -12,8 +12,6 @@
     "position": "center",
     "min_width": 600,
     "min_height": 400,
-    "max_width": 600,
-    "max_height": 400,
-    "resizable": false
+    "resizable": true
   }
 }
