--- a/clientTool/lib/js/.jshintrc
+++ b/clientTool/lib/js/.jshintrc
@@ -6,6 +6,8 @@
         "gui": true,
         "win": true,
         "_": true,
-        "UI": true
+        "UI": true,
+        "fish": true,
+        "LOCAL_ITEM_SETS": true
     }
 }
