--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "page": "^1.7.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.0",
     "stylus": "0.42.3",
